# GeolocateAI

./: .gitignore  README.md  image_dataset.py  pyproject.toml  requirements-dev.txt  requirements.txt  train.sh  train_model_hierarchy.py  train_model_nohierarchy.py
.github/: copilot-instructions.md
dev/data/: README.md  combine_data.py  extract_hierarchy.py  train_hdbscan.py
dev/data/2015_placing/: README.md  download_placing.py
dev/data/2016_placing/: README.md  messagepack_unpack.py  move_data.py
dev/data/google_landmark/: README.md  landmark_join.py  landmark_to_coords.py
dev/data/ww_geotag/: README.md  exif_to_csv.py
dev/viz/: map_points.ipynb  map_points_cluster.ipynb
modules/: base_classifier.py  checkpointedsequential.py  clip_model.py  feature_perspective.py  geo_clip_frozen_classifier.py  geo_clip_liquid_classifier.py  geo_clip_model.py  geo_vt_classifier.py  geo_vt_model.py  hierarchic_dataset.py  hierarchic_geo_clip_liquid_classifier.py  hierarchic_inference.py  image_dataset.py  kldivlosssoftmax.py  model_factory.py  samplers.py  schedulers.py  skipattnmlp.py  visiontranformer_model.py
